htdocs/theme/raw/sass/_custom.scss
/* ... */
.image-rotator {
    height: 6.875rem; // 110px;
    line-height: 4.6875rem; // 75px;

    .image-rotator-inner {
        display: inline-block;
        text-align: center;
        width: 6.875rem; // 110px;
    }
}

#searchviews_matchalltags_container {
    width: 100%;
    margin-top: $spacing-sm;
    label {
        margin-left: 1.75rem; // 28px;
    }
    input {
        margin-left: $spacing-xs;
        margin-top: -1.125rem; // -18px;
        float: left;
        width: auto;
        height: auto;
    }
    div {
        margin-left: $spacing-xs;
        padding-top: 0;
        span {
            padding-top: 0;
        }
    }
}

div.toolbarhtml {
    margin-top: $spacing-sm;
    clear: both;
    float: right;
    div {
        text-align: right;
    }
}

#viewinstructions,
.peerinstructions,
.blockinstructions {
    &.with-toolbar {
        margin-right: $spacing-xl;
    }
    div.fieldset-body {
        background-color: $accent-bg !important;
    }
}
.peerinstructions {
    div.fieldset-body {
        margin-bottom: $spacing-base !important;
    }
}
.viewinstruction-export {
    border: $card-border-width solid $card-border-color;
    padding: $card-spacer-y $card-spacer-x;
    margin-bottom: -$card-border-width; //remove double border
    background-color: $accent-bg !important;
}
.releaseviewform {
    position: relative;
    top: $spacing-lg;
    div {
        padding-right: 5px !important;
    }
}

#pendinglist {
    margin-bottom: 0;
}

// Used when you really only need flex on an item
.flexbox {
    display: flex;
}

// Add space when there are 2 selects next to each other
.select {
    + .select {
        margin-left: $spacing-sm;
    }
    + .submit:not(.input-group-append) {
        margin-left: $spacing-sm;
    }
    #bulkexport & {
        + .select {
            margin-left: 0;
        }
    }
}

// Removes weird text node between buttons on admin/users/suspended.php
.pieform-fieldset.btn-group {
    font-size: 0;
}

.elasticsearch-filters {
    border-bottom: $card-border-width solid $card-border-color;
    background-color: $card-header-bg;
}

// Mostly used to make the table matrix popups work
.d-none.popover {
    display: none !important;
}

// Backup for libraries that still need hidden class instead of bootstrap 4s new .d-none
.hidden {
    display: none;
}
//used for Smart Evidence json-editor
#editor_holder .bg-light {
    background-color: $white !important;
}

// Forum select wrap too close to text
.forumselectwrap {
    margin: 0 0 $spacing-base $spacing-base;
}

.consentbutton div,
.consentbutton span.description {
    padding: 0 !important;
}

// reduce size of uploaded logos appearing instituion settings page
#institution_logohtml_container img {
    max-height: $navbar-height;
}
#institution_logoxshtml_container img {
    height: 3rem; // 48px;
}
#institution_logohtml_container,
#institution_deletelogo_container,
#institution_logoxshtml_container,
#institution_deletelogoxs_container {
    padding-left: 17.1875rem; // 275px;
    @include media-breakpoint-down(sm) {
        padding-left: 0;
    }
}

// shared view filter in smaller screens too close to top element
@include media-breakpoint-down(md) {
  #search_inputgroupsort_container {
    margin-top: $spacing-base;
  }
}

#login_login_container fieldset {
    border-bottom: $card-border-width solid $card-border-color;
    h3 a {
        font-size: $font-size-sm;
        font-weight: $font-weight-normal;
    }
}

.validfiletypes {
    margin: $spacing-lg $spacing-lg 0 $spacing-lg;
    padding: $card-spacer-y $card-spacer-x;
    background-color: $accent-bg;
    border-radius: $border-radius;
    font-size: $font-size-sm;

    span {
        padding-right: $spacing-xs;
        display: inline-block;
        &.label {
            font-weight: $font-weight-bold;
        }
    }
}

#migrateinstitution_authinstance {
    max-width: 420px;
}

.activegrouplabels {
    background-color: $form-bg;

    form .form-group {
        border-bottom: 0;
        padding: 0;
    }

    &.noresults form .form-group {
        padding: $card-spacer-y $card-spacer-x;
        border-bottom: $input-border-width solid $input-border-color;
    }
}

#webservices_function_groups_add {
    input.text {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
    }
    input.submit {
        border-radius: $input-border-radius;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
    }
}

.course-detail {
    margin-top: $paragraph-margin-bottom;
}

.course-date {
    margin-bottom: 0;
}

// Group categories edit buttons alignment
#editmenus td.edit .btn-group {
    margin-top: $line-height-base * 1rem;
}

#sharedviewlist .icon {
    font-size: 1.25rem; // 20px
    &.icon-minus {
        color: scale-color($gray-300, $lightness: 28%);
    }
}

